--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Paddle</title>
+    <script src="./global.js" defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB71IXs8mXgPbASRGc8TeMM08V10YaaI58&libraries=places&callback=initMap" defer></script>
+    <script src="https://apis.google.com/js/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
